Hide image scrollbars in Chrome - stops them flashing when you jumpt through screens

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -85,6 +85,11 @@ a{
 	border: 0;
 }
 
+.image::-webkit-scrollbar { 
+	width: 0 !important; 
+	height: 0 !important;
+}
+
 .screen.zoomed-in .image img:hover{
 	cursor: default;
 }
